[gd_scene load_steps=27 format=3 uid="uid://dn4008nv06clk"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_60uys"]
[ext_resource type="Shader" uid="uid://0dm11c6qayeu" path="res://shaders/hit.tres" id="2_3r7k7"]
[ext_resource type="Theme" uid="uid://dti72e04ltog4" path="res://game.theme" id="2_36rfs"]
[ext_resource type="Shader" path="res://shaders/border.gdshader" id="2_go6j5"]
[ext_resource type="PackedScene" uid="uid://c86ohxnlg8a" path="res://player/dash_stamina.tscn" id="2_tp1el"]
[ext_resource type="Script" path="res://scenes/scripts/camera.gd" id="3_dgiyq"]
[ext_resource type="Texture2D" uid="uid://bcevh7r2hat" path="res://sprites/title.png" id="3_hsspx"]
[ext_resource type="Texture2D" uid="uid://bicv2shwkdaf8" path="res://sprites/background/bg_mainmenu2.png" id="3_lq80u"]
[ext_resource type="Script" path="res://scenes/scripts/camera_effects.gd" id="3_pcqfg"]
[ext_resource type="PackedScene" uid="uid://cefk00qrd2w1n" path="res://player/ghost_player.tscn" id="4_sd2tg"]
[ext_resource type="Texture2D" uid="uid://s3jyk22y2cm4" path="res://sprites/b_particle.png" id="5_p17an"]
[ext_resource type="AudioStream" uid="uid://i6mb63m4vyaa" path="res://SFX/possessed_hit2.ogg" id="6_7j32i"]
[ext_resource type="PackedScene" uid="uid://c6l1nlaffyj1n" path="res://enemies/punching_bag.tscn" id="8_jpx4s"]
[ext_resource type="AudioStream" uid="uid://btdl1ng72s6u8" path="res://SFX/button_pressed2.ogg" id="10_70wp0"]
[ext_resource type="Script" path="res://scenes/menus/bg_main_menu.gd" id="10_t81fx"]
[ext_resource type="Texture2D" uid="uid://bksvvake7ja0d" path="res://sprites/background/bg_mainmenu3.png" id="12_undaw"]
[ext_resource type="Texture2D" uid="uid://dk65pd0y7rjyc" path="res://sprites/background/bg_mainmenu4.png" id="13_qikvg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qg754"]
shader = ExtResource("2_go6j5")
shader_parameter/rect_size = Vector2(1.935, 0.145)
shader_parameter/bness = 5.45
shader_parameter/fall_off_scale = 6.385
shader_parameter/b_offset = 0.08
shader_parameter/speed = 3.188
shader_parameter/noise_intensity = 0.553

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2afgu"]
shader = ExtResource("2_3r7k7")
shader_parameter/isHit = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3j8o7"]
size = Vector2(20.3925, 18.2884)

[sub_resource type="Animation" id="Animation_lueaj"]
length = 0.0115
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4443o"]
resource_name = "hit_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 0.217638),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdvf1"]
_data = {
"RESET": SubResource("Animation_lueaj"),
"hit_flash": SubResource("Animation_4443o")
}

[sub_resource type="Curve" id="Curve_6khei"]
_data = [Vector2(0, 0.736264), 0.0, 0.0, 0, 0, Vector2(0.0539419, 0.912088), 0.0, 0.0, 0, 0, Vector2(0.195021, 0.912088), 0.0, 0.0, 0, 0, Vector2(0.975104, 0.406593), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ge2x"]
size = Vector2(20.584, 19.1442)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3vm2v"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("10_70wp0")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60uys")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Stamina" parent="CanvasLayer" instance=ExtResource("2_tp1el")]
z_index = 6
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 137.0
offset_top = 36.0
offset_right = 137.0
offset_bottom = 36.0
grow_horizontal = 1
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TitleSprite" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 188)
texture = ExtResource("3_hsspx")

[node name="CameraControl" type="Control" parent="."]
unique_name_in_owner = true
layout_direction = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
pivot_offset = Vector2(579, 423)
script = ExtResource("3_pcqfg")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.871559, 0.838903, 0.927476, 1)

[node name="Border" type="CanvasGroup" parent="."]
modulate = Color(1, 1, 1, 0.235294)
self_modulate = Color(0.348, 0.245, 0.855, 0.027)
position = Vector2(-4, -10)

[node name="ColorRect" type="ColorRect" parent="Border"]
material = SubResource("ShaderMaterial_qg754")
offset_left = -7.0
offset_top = -159.0
offset_right = 33.0
offset_bottom = -119.0
scale = Vector2(30.04, 8)

[node name="ColorRect2" type="ColorRect" parent="Border"]
material = SubResource("ShaderMaterial_qg754")
offset_left = 96.0
offset_top = -182.0
offset_right = 136.0
offset_bottom = -142.0
rotation = 1.57079
scale = Vector2(30.04, 8)

[node name="ColorRect4" type="ColorRect" parent="Border"]
material = SubResource("ShaderMaterial_qg754")
offset_left = 1380.0
offset_top = -182.0
offset_right = 1420.0
offset_bottom = -142.0
rotation = 1.57079
scale = Vector2(30.04, 8)

[node name="ColorRect3" type="ColorRect" parent="Border"]
material = SubResource("ShaderMaterial_qg754")
offset_left = -7.0
offset_top = 779.0
offset_right = 33.0
offset_bottom = 819.0
scale = Vector2(30.04, 8)

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 183.0
offset_top = -201.0
offset_right = 407.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(113, 53)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_2afgu")
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("2_36rfs")
text = "Play"

[node name="p_area" type="Area2D" parent="MarginContainer/VBoxContainer/Play"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/VBoxContainer/Play/p_area"]
position = Vector2(111.5, 45)
scale = Vector2(10.445, 4.265)
shape = SubResource("RectangleShape2D_3j8o7")

[node name="HitFlash" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Play"]
libraries = {
"": SubResource("AnimationLibrary_tdvf1")
}

[node name="p_splash" type="CPUParticles2D" parent="MarginContainer/VBoxContainer/Play"]
position = Vector2(96, 56)
emitting = false
lifetime = 1.2
one_shot = true
speed_scale = 2.47
explosiveness = 0.86
randomness = 0.16
texture = ExtResource("5_p17an")
spread = 176.55
gravity = Vector2(0, 0)
initial_velocity_min = 71.52
initial_velocity_max = 102.3
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_6khei")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("2_36rfs")
text = "Settings"

[node name="o_area" type="Area2D" parent="MarginContainer/VBoxContainer/Settings"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/VBoxContainer/Settings/o_area"]
position = Vector2(112.5, 44.175)
scale = Vector2(10.445, 4.265)
shape = SubResource("RectangleShape2D_8ge2x")

[node name="HitFlash2" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Settings"]
root_node = NodePath("../../Play")
libraries = {
"": SubResource("AnimationLibrary_tdvf1")
}

[node name="o_splash" type="CPUParticles2D" parent="MarginContainer/VBoxContainer/Settings"]
position = Vector2(91, 49)
emitting = false
lifetime = 1.2
one_shot = true
speed_scale = 2.47
explosiveness = 0.86
randomness = 0.16
texture = ExtResource("5_p17an")
spread = 176.55
gravity = Vector2(0, 0)
initial_velocity_min = 71.52
initial_velocity_max = 102.3
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_6khei")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2
theme = ExtResource("2_36rfs")
text = "Exit"

[node name="e_area" type="Area2D" parent="MarginContainer/VBoxContainer/Exit"]
position = Vector2(0, 1)
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MarginContainer/VBoxContainer/Exit/e_area"]
position = Vector2(112.5, 44.175)
scale = Vector2(10.445, 4.265)
shape = SubResource("RectangleShape2D_8ge2x")

[node name="e_splash" type="CPUParticles2D" parent="MarginContainer/VBoxContainer/Exit"]
position = Vector2(91, 48)
emitting = false
lifetime = 1.2
one_shot = true
speed_scale = 2.47
explosiveness = 0.86
randomness = 0.16
texture = ExtResource("5_p17an")
spread = 176.55
gravity = Vector2(0, 0)
initial_velocity_min = 71.52
initial_velocity_max = 102.3
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_6khei")

[node name="punching_bag" parent="." instance=ExtResource("8_jpx4s")]
position = Vector2(253, 544)

[node name="background" type="Node2D" parent="."]
script = ExtResource("10_t81fx")

[node name="background" type="Sprite2D" parent="background"]
z_index = -10
position = Vector2(0, -42)
texture = ExtResource("13_qikvg")
centered = false

[node name="middleground" type="Sprite2D" parent="background"]
z_index = -10
position = Vector2(0, -42)
texture = ExtResource("12_undaw")
centered = false

[node name="foreground" type="Sprite2D" parent="background"]
z_index = -10
position = Vector2(576, 458)
texture = ExtResource("3_lq80u")

[node name="GhostPlayer" parent="." instance=ExtResource("4_sd2tg")]
unique_name_in_owner = true
z_index = 2
position = Vector2(576, 271)

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
top_level = true
position = Vector2(584, 449)
zoom = Vector2(0.9, 0.9)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("3_dgiyq")

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7j32i")

[node name="button_hover" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_3vm2v")
pitch_scale = 0.88
bus = &"SFX"

[node name="wall" type="StaticBody2D" parent="."]
collision_layer = 15
collision_mask = 15

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="wall"]
position = Vector2(1004, 559)
scale = Vector2(1.03, 1.03)
build_mode = 1
polygon = PackedVector2Array(220, 367, -1064.91, 366.019, -1064.91, -466.019, -887.379, -432.039, -897.087, -238.835, -888.35, 87.3787, -865.049, 255.34, -651.456, 268.932, -167.961, 268.932, 31.068, 252.427, 54.3689, 89.3204, 65.0486, -250.485, 53.3981, -426.214, -161.165, -459.223, -707.767, -452.427, -902.913, -423.301, -1053.4, -450.485, -1039.67, -561.165, 214.699, -561.165)

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="body_entered" from="MarginContainer/VBoxContainer/Play/p_area" to="." method="_on_p_area_body_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_options_pressed"]
[connection signal="body_entered" from="MarginContainer/VBoxContainer/Settings/o_area" to="." method="_on_o_area_body_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="body_entered" from="MarginContainer/VBoxContainer/Exit/e_area" to="." method="_on_e_area_body_entered"]
